--- a/src/main/resources/templates/review/oneReview.html
+++ b/src/main/resources/templates/review/oneReview.html
@@ -122,63 +122,10 @@
 
 <div layout:fragment="script" th:inline="javascript">
     <script th:inline="javascript" >
-        const buyerDelBtn =document.getElementById('buyerDelBtn')
-        if(buyerDelBtn) {
-            buyerDelBtn.addEventListener('click', deleteBuyer);
-        }
-
-        function deleteBuyer() {
-            if (!delConfirm()) { return; }
-            let reviewBuyerId = [[${review.reviewBuyerId}]];
-            let url = '/reviews/buyer/' + reviewBuyerId
-            fetch(url, {
-                method: 'DELETE'
-            }).then(response => {
-                if (response.ok) {
-                    return response;  // HTTP 응답 객체를 JSON으로 변환하여 반환
-                } else {
-                    throw new Error('서버로부터 응답을 받지 못했습니다.');  // 예외 발생
-                }
-            }).then(data => {
-                alert('삭제에 성공했습니다.');
-                let me = [[${review.sellerId}]];
-                window.location.href = `/members/${me}/trade/sell-list`;
-            }).catch(err => {
-                alert('삭제에 실패했습니다.');
-            })
-        }
-
-        const sellerDelBtn = document.getElementById('sellerDelBtn');
-        if(sellerDelBtn) {
-            sellerDelBtn.addEventListener("click", deleteSeller);
-        }
-
-        function deleteSeller(){
-            if (!delConfirm()) {
-                return;
-            }
-            let reviewSellerId = [[${review.reviewSellerId}]];
-            let url = '/reviews/seller/' + reviewSellerId
-            fetch(url, {
-                method: 'DELETE'
-            }).then(response => {
-                if (response.ok) {
-                    return response;
-                } else {
-                    throw new Error('서버로부터 응답을 받지 못했습니다.');  // 예외 발생
-                }
-            }).then(data => {
-                    alert('삭제에 성공했습니다.');
-                    let me = [[${review.buyerId}]];
-                    window.location.href = `/members/${me}/trade/buy-list`;
-            }).catch(err => {
-                    alert('삭제에 실패했습니다.');
-            });
-        }
-
-        function delConfirm() {
-            return confirm('리뷰를 삭제하시겠습니까?');
-        }
+        const reviewBuyerId = [[${review.reviewBuyerId}]];
+        const sellerMe = [[${review.sellerId}]];
+        const reviewSellerId = [[${review.reviewSellerId}]];
+        const buyerMe = [[${review.buyerId}]];
     </script>
-
+    <script src="/js/review/one_review.js"> </script>
 </div>
