--- a/src/main/resources/static/css/review_modal.css
+++ b/src/main/resources/static/css/review_modal.css
@@ -16,7 +16,7 @@
     top: 50%;
     left: 50%;
     width: 300px;
-    height: 220px;
+    height: 270px;
     padding:  30px;
     margin: 0;
 
@@ -51,7 +51,7 @@
 }
 #review_hide_btn {
     cursor: pointer;
-    color: red;
+    color: navy;
 }
 #review_del_btn {
     cursor: pointer;
